<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_brouser">Browser</string>
    <string name="menu_data">Data</string>
    <string name="menu_worker">Worker</string>
    <string name="menu_recorder">Recorder</string>
    <string name="menu_collage">Collage</string>
    <string name="menu_sensor">Sensor</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_filework">File Work</string>
</resources>