<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.gupalodr.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.gupalodr.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.gupalodr.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_brouser"
        android:name="ru.mirea.gupalodr.mireaproject.WebViewFragment"
        android:label="@string/menu_brouser"
        tools:layout="@layout/fragment_web_view" />

    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.gupalodr.mireaproject.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/nav_worker"
        android:name="ru.mirea.gupalodr.mireaproject.WorkerFragment"
        android:label="@string/menu_worker"
        tools:layout="@layout/fragment_worker" />

    <fragment
        android:id="@+id/nav_recorder"
        android:name="ru.mirea.gupalodr.mireaproject.RecorderFragment"
        android:label="@string/menu_recorder"
        tools:layout="@layout/fragment_recorder" />

    <fragment
        android:id="@+id/nav_collage"
        android:name="ru.mirea.gupalodr.mireaproject.CollageFragment"
        android:label="@string/menu_collage"
        tools:layout="@layout/fragment_collage" />

    <fragment
        android:id="@+id/nav_sensor"
        android:name="ru.mirea.gupalodr.mireaproject.SensorFragment"
        android:label="@string/menu_sensor"
        tools:layout="@layout/fragment_sensor" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.gupalodr.mireaproject.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_filework"
        android:name="ru.mirea.gupalodr.mireaproject.FileWorkFragment"
        android:label="@string/menu_filework"
        tools:layout="@layout/fragment_file_work" />
</navigation>